--- a/starterkit/sass/alkaline/components/_card.scss
+++ b/starterkit/sass/alkaline/components/_card.scss
@@ -7,6 +7,8 @@
     flex-direction: column;
     height: 100%;
     width: 100%;
+    margin: 0 auto;
+    max-width: $global-width;
 
     > figure {
       flex: none;
